@@ -32,7 +32,6 @@ t/ungetc.t
 t/ungets.t
 
 # Module::Install extensions
-inc/File/Slurp.pm
 inc/Module/Install.pm
 inc/Module/Install/AutoLicense.pm
 inc/Module/Install/AutomatedTester.pm
