@@ -12,15 +12,12 @@ all_from('lib/FileHandle/Unget.pm');
 auto_set_bugtracker;
 githubmeta;
 
-include(
-  'File::Slurp' => 0,
-);
-
 requires(
   'Scalar::Util' => '1.14',
 );
 
 test_requires(
+  'File::Slurp' => 0,
   'Test::More' => 0,
   'File::Spec::Functions' => 0,
 );
